# sandbox-cpp

./: .editorconfig  .gitignore
ackermann/: CMakeLists.txt  build-clang.ps1  build-cmake.ps1  build-mingw.ps1  c-ackermann1.c  c-ackermann2.c  c-ackermann3.c  cpp-akermann1.cpp  cpp-akermann2.cpp
algorithms/: CMakeLists.txt
algorithms/lib/: generators.hpp
algorithms/search/linear/: .gitignore  Makefile
algorithms/sorting/insertion/: .gitignore  CMakeLists.txt  Makefile  sorting-insertion.cpp  sorting-insertion.hpp
algorithms/sorting/merge/: .gitignore  CMakeLists.txt  Makefile  sorting-merge.cpp  sorting-merge.hpp
c-lvm-test/: build-cmake.ps1  lvm_test.c
c-socket-example/: build-cmake.ps1  server.c
c-socket-example-unix-only/: echo.server.c  tcp.clnt.c  tcp.server.c
c_lvm_test/: CMakeLists.txt  build-clang.ps1  build-mingw.ps1
c_socket_example/: CMakeLists.txt  build-clang.ps1  build-mingw.ps1  client.c
c_socket_example_unix_only/: echo.clnt.c
casts/: bit_cast_sample_01.cpp
cherno/: CMakeLists.txt  cm.ps1
cherno/cmake/: Common.cmake  CompilerFlags.cmake
cherno/src/: CMakeLists.txt  Log.cpp  Log.h  junk.cpp  main.cpp  main.h
cherno/test/: CMakeLists.txt  conan_test.cpp  test_main.cpp
cmake/: README.md
cmake/arch/: CMakeLists.txt  build.sh
cmake/variables/: CMakeLists.txt  build.ps1  vars.cmake
common-properties/: .gitignore  common-properties.sln
common-properties/_conf/: Common.props  Debug.props  Library.props  Release.props
common-properties/project/: project.props  project.vcxproj
common_properties/_conf/: Application.props  Common.props  Config.props  FastDebug.props
common_properties/project/: project.vcxproj.filters
conan_academy/: conan_init.ps1  profile-vs2019-x64-static.txt  trainig_environment.txt
conan_academy/_cmake/: base.cmake
conan_academy/consumer-nogen/: conanfile.txt
conan_academy/consumer-shared/: conanfile.txt
conan_academy/consumer-static/: conanfile.txt  history.ps1
conan_academy/consumer_cmake_find/: conanfile.txt  history.ps1
conan_academy/create_package/: history.ps1
conan_academy/create_package_consume/: conanfile.txt
conan_academy/create_package_options/: history.ps1
conan_academy/create_package_sources/: history.ps1
conan_academy/gtest/: history.ps1  profile_with_cmake
conan_academy/hooks/: history.ps1
conan_academy/lockfiles/: .gitignore  history.ps1
conan_academy/package_id/: history.ps1
conan_academy/profiles_example/: history.ps1  rpi_armv7_win
conan_academy/python_requires/: history.ps1
conan_academy/remote_repo_consume/: CMakeLists.txt  conanfile.txt  history.ps1
conan_academy/requires/: history.ps1
conan_academy/requires_conditional/: history.ps1
conan_academy/requires_conflict/: conanfile.txt  history.ps1
conan_academy/revisions/: history.ps1
conan_academy/run_apps/: .gitignore  history.ps1
conan_essentials/: .gitignore
conan_essentials/_cmake/: base.cmake  (+1 more)
conan_essentials/consumer/: .gitignore  CMakeLists.txt  builld_history.ps1  conanfile.txt  history.ps1
conan_essentials/consumer-static/: CMakeLists.txt  builld_history.ps1  conanfile.txt  graph-current.html  zlib-1.2.11-table.html
conan_essentials/consumer_cmake_find/: CMakeLists.txt
conan_essentials/create_package_consume/: CMakeLists.txt  history.ps1  timer.cpp
cpp-env/: CMakeLists.txt  build-clang.ps1  output.txt  show__cplusplus.cpp
cpp-sevies-one/: conanfile.txt
cpp-sevies-one/test/: CMakeLists.txt  conan_test.cpp
cpp17_in_detail/: build-cmake.ps1
cpp20/: .gitignore  advanced_mathematics.cppm  advanced_mathematics_main.cpp  hw_modular.cpp  info.txt  main.cpp  main1.cpp  math.cppm  math1.cppm
cpp_17_parallel/: par_vec.cpp
cpp_advanced_topics/: .gitignore  README.md
cpp_env/: build-mingw.ps1
cpp_pointers/: README.md
cpp_series_one/src/: CMakeLists.txt  junk.cpp  main.cpp
cpp_series_one_premake/: .gitignore  commit_now.ps1  premake5.lua
cpp_sevies_one/: .gitignore  CMakeLists.txt
data_types/: tuple_cpp17.cpp
gtest_example/: .gitignore  CMakeLists.txt  conanfile.txt  history.ps1  main.cpp
gtest_example/cmake/: compiler_flags.cmake
lambda_instights/: .gitignore  CMakeLists.txt  history.ps1  lambda1.cpp  lambda2.cpp
lib/: fibonacci.cpp  formats.h  generators.h  logger.h  primes.cpp  timer.h  types.h
memory_layout/: .gitignore  1.cpp  1.txt  CMakeLists.txt  CMakeSettings.json  clang-record-layout-1.cpp.txt  clang-vtable-layout-1.cpp.txt  compilers_ast_to_dot.java  gcc-1.cpp.txt  msvc-all-class-vtable-layout-1.cpp.txt  msvc-single-class-vtable-layout-1.cpp.txt  script.ps1
metaprogramming/: README.md
metaprogramming/compilation_error_fibonacci/: CMakeLists.txt  build-mingw.ps1  compilation_error_fibonacci.cpp
metaprogramming/iterator/: CMakeLists.txt  build-clang.ps1  build-mingw.ps1  iterator.cpp
misc/: arguments.cpp  destructors.cpp  padding_c.c  random.c  random.txt  task-2007-03-14.c  vector-find-minimal-int.cpp
multithreading/: CMakeLists.txt  README.md
multithreading/src/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  main.cpp  main.h
multithreading/test/: CMakeLists.txt  color_test.cpp  color_test.h
opengl/: README.md
opengl/simple-red-box/: CMakeLists.txt  build-cmake.ps1
optimizations/: README.md
parallel_programming/: README.md
progress_bars/: CMakeLists.txt  README.md
r-rinside-example/: .gitignore  README.md  README_RU.md  a.cpp  b.cpp  build-dev.sh  build.sh  info.txt  install.sh  main.cpp
rcpp/: .env  README.md  README_RU.md  a.cpp  b.cpp  build-dev.sh  build.sh  c.cpp  run.ps1
real-time-windows-01/: 1.cpp  2.cpp  3-boost.cpp
smart_pointers/: shared_1.cpp  unique_1.cpp  unique_2.cpp
ssloy-graphics-course/: README.md  build64.ps1
ssloy_graphics_course/: CMakeLists.txt  build32.ps1
ssloy_graphics_course/src/: CMakeLists.txt  main.cpp  main.h
ssloy_graphics_course/test/: CMakeLists.txt  main.cpp  main.h  max_values.cpp  unicode.cpp
turing_completeness/: a_to_blank.cpp
web_services_crow/: .gitignore  CMakeLists.txt  Dockerfile  README.md
webasm-cpp/: .gitignore  README.md  docker-compose.yml
(+336 files in other folders)
